# workshop

./: .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.dev  Dockerfile.test  LICENSE  README-dev.md  README.md  docker-compose.override.yml  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml  reload.bat  upgrade.sh
.githooks/: pre-commit
docker/configuration/: configuration.py  plugins.py
docker/env/: netbox.env
docker/env-test/: netbox.env
scripts/: device.py  interface.py  ipam.py  prefix.py  reconcile.db  reconcile.py  schema.sql  vlan.py  vrf.py
src/: setup.py
src/slurpit_netbox/: __init__.py  decorators.py  filtersets.py  forms.py  importer.py  navigation.py  search.py  slurpitch.py  tables.py  template_content.py  urls.py  utilities.py  validator.py  views.py
src/slurpit_netbox/api/: __init__.py  serializers.py  urls.py  views.py
src/slurpit_netbox/management/: choices.py
src/slurpit_netbox/migrations/: 0001_initial.py  0002_alter_slurpitimporteddevice_changeddate_and_more.py  0002_alter_slurpitplanning_name_and_more.py  0002_create_source.py  0002_slurpitlog.py  0003_alter_slurpitimporteddevice_ipv4_and_more.py  0003_planning.py  0003_slurpitlog_tags_setting.py  0004_planning_selected.py  0004_setting_connection_status.py  0004_slurpitmapping.py  0005_manufacturer.py  0005_remove_slurpitlog_comments_remove_slurpitlog_created_and_more.py  0009_slurpitplan.py  (+32 more)
tests/: .env  Dockerfile  Slurpit plugin.postman_collection.json  docker-compose.branch.yml  docker-compose.dev.yml  docker-compose.yml  output.txt  test_integration.py
(+58 files in other folders)
